-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
2.10 (and 2.11)
-
3
-
9223372036854775807
There is a performance regression on dir removal.
Server and client : RHEL7.3
Lustre version : 2.10.52
Backend filesystem: ldiskfs
mpirun --allow-run-as-root /work/tools/bin/mdtest -n 5000 -v -d /scratch0/mdtest.out -D -i 3 -p 10 -w 0 -u
SUMMARY: (of 3 iterations) Operation Max Min Mean Std Dev --------- --- --- ---- ------- Directory creation: 89757.381 65618.928 74607.900 10774.356 Directory stat : 320946.433 319888.242 320294.264 465.749 Directory removal : 19028.569 17837.487 18351.200 499.838 Tree creation : 434.446 158.826 318.943 116.860 Tree removal : 27.018 25.210 26.281 0.775
- is related to
-
LU-7053 Do not use osd_object_find in osd_index_ea_insert
-
- Resolved
-